force-app/main/default/objects/DMS_Files__c/DMS_Files__c.object-meta.xml
<CustomObject>
    <label>DMS Files</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>DMS Files Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMS Files</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>