force-app/main/default/objects/DMS_Files__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <label>Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>