force-app/main/default/objects/DMS_Files__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>DMS Files</relationshipLabel>
    <relationshipName>DMS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>