force-app/main/default/objects/DMS_Files__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <externalId>true</externalId>
    <label>ContentVersionId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>