force-app/main/default/objects/DMS_Files__c/fields/DMS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>DMS External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>