force-app/main/default/objects/DMS_Files__c/fields/DMS_Link__c.field-meta.xml
<CustomField>
    <fullName>DMS_Link__c</fullName>
    <label>DMS Link</label>
    <type>Url</type>
</CustomField>