force-app/main/default/objects/DMS_Files__c/fields/DocumentID__c.field-meta.xml
<CustomField>
    <fullName>DocumentID__c</fullName>
    <label>DMS Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>