force-app/main/default/objects/DMS_Files__c/fields/DocumentIndex__c.field-meta.xml
<CustomField>
    <fullName>DocumentIndex__c</fullName>
    <label>Document Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>