force-app/main/default/objects/DMS_Files__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>