force-app/main/default/objects/DMS_Files__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>