force-app/main/default/objects/DMS_Files__c/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <label>File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>