force-app/main/default/objects/DMS_Files__c/fields/GlobalId__c.field-meta.xml
<CustomField>
    <fullName>GlobalId__c</fullName>
    <label>GlobalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>