force-app/main/default/objects/DMS_Files__c/fields/Has_Multiple_Versions__c.field-meta.xml
<CustomField>
    <fullName>Has_Multiple_Versions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Multiple Versions</label>
    <type>Checkbox</type>
</CustomField>