force-app/main/default/objects/DMS_Files__c/fields/ImageIndex__c.field-meta.xml
<CustomField>
    <fullName>ImageIndex__c</fullName>
    <label>Image Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>