force-app/main/default/objects/DMS_Files__c/fields/Is_Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest Version</label>
    <type>Checkbox</type>
</CustomField>