force-app/main/default/objects/DMS_Files__c/fields/Next_Retry__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry__c</fullName>
    <inlineHelpText>Retry will not be attempted if status is success. Also, this field will be nullified on manual retries.</inlineHelpText>
    <label>Next Retry</label>
    <type>DateTime</type>
</CustomField>