force-app/main/default/objects/DMS_Files__c/fields/OmniDocViewURL__c.field-meta.xml
<CustomField>
    <fullName>OmniDocViewURL__c</fullName>
    <formula>HYPERLINK($Label.ABHI_OmniDocURL+&apos;&amp;DocumentId=&apos;+DocumentIndex__c+&apos;&amp;Userdbid=&apos;+VID__c, &apos;Click here&apos;, &apos;_blank&apos;)</formula>
    <label>Omnidoc View URL</label>
    <type>Text</type>
</CustomField>