force-app/main/default/objects/DMS_Files__c/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Retry</label>
    <type>Checkbox</type>
</CustomField>