force-app/main/default/objects/DMS_Files__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>ANDHRA PRADESH</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>ARUNACHAL PRADESH</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>ASSAM</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>BIHAR</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>CHATTISGARH</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>DELHI</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>GOA</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>GUJARAT</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>HARYANA</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>HIMACHAL PRADESH</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>JAMMU &amp; KASHMIR</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>JHARKAND</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>KARNATAKA</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>KERALA</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>MADHYA PRADESH</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>MAHARASHTRA</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>MANIPUR</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>MEGHALAYA</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>MIZORAM</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>NAGALAND</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>ORISSA</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>PUNJAB</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>RAJASTHAN</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>SIKKIM</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>TAMIL NADU</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>TRIPURA</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>UTTAR PRADESH</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>UTTARANCHAL</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>WEST BENGAL</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>ANDAMAN &amp; NICOBAR ISLANDS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>