force-app/main/default/objects/DMS_Files__c/fields/SFDC_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>SFDC External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>