force-app/main/default/objects/DMS_Files__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>