force-app/main/default/objects/DMS_Files__c/fields/VID__c.field-meta.xml
<CustomField>
    <fullName>VID__c</fullName>
    <label>VID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>