force-app/main/default/objects/DMS_Files__c/recordTypes/ABFL.recordType-meta.xml
<RecordType>
    <fullName>ABFL</fullName>
    <active>true</active>
    <label>ABFL</label>
</RecordType>