force-app/main/default/objects/DMS_Files__c/validationRules/DMS_External_Id_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>DMS_External_Id_cannot_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()),ISCHANGED(DMS_External_ID__c))</errorConditionFormula>
    <errorDisplayField>DMS_External_ID__c</errorDisplayField>
    <errorMessage>You can&apos;t edit the DMS External ID</errorMessage>
</ValidationRule>